[SYMFONY] Setting up symfony skeleton

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,13 @@
 .idea/*
 vendor
 vendor/*
-var/cache
-var/cache/*
+
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+###< symfony/framework-bundle ###
+
