--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # the latter taking precedence over the former:
 #
 #  * .env                contains default values for the environment variables needed by the app
-#  * .env.local          uncommitted file with local overrides
+#  * .env.local   EX       uncommitted file with local overrides
 #  * .env.$APP_ENV       committed environment-specific defaults
 #  * .env.$APP_ENV.local uncommitted environment-specific overrides
 #
@@ -18,3 +18,7 @@
 APP_ENV=dev
 APP_SECRET=80c6eb8bd133df9c811850c91197fe4c
 ###< symfony/framework-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=null://null
+###< symfony/mailer ###
